# jupyter-pixi

./: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
jupyter-config/server-config/: jupyter_pixi.json
jupyter_pixi/: __init__.py  handlers.py
src/: index.ts  pixi-service.ts  pixi-widget.ts  util.ts
src/__tests__/: jupyter_pixi.spec.ts  pixi-service.spec.ts  pixi-widget.spec.ts
style/: index.css
ui-tests/: package.json
ui-tests/tests/: jupyter_pixi.spec.ts
